# gemma4-capability-map

./: .env.example  .gitignore  AGENT_CONTEXT.md  README.md  pyproject.toml
configs/: alpha_drift_matrix.yaml  alpha_integrated_matrix.yaml  alpha_matrix.yaml  alpha_real_world_matrix.yaml  alpha_specialist_drift_matrix.yaml  alpha_specialist_matrix.yaml  community_signals.yaml  external_benchmarks.yaml  knowledge_work_matrix.yaml  knowledge_work_matrix_ablation_32_replayable.yaml  knowledge_work_matrix_alignment_32_26.yaml  knowledge_work_matrix_experimental.yaml  model_registry.yaml  models.yaml  packaged_workflows.yaml  pipelines.yaml  stressors.yaml  tracks.yaml
docs/: architecture-improvements.md  failure-taxonomy.md  knowledge-work-arena.md  methodology.md  real-world-benchmarking.md  research-log.md  research-ops.md  task-authoring.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
results/: leaderboard.csv
scripts/: agent_cli.py  build_backend_report.py  build_history_report.py  build_knowledge_work_board.py  build_knowledge_work_history.py  build_leaderboard.py  hf_reasoner_service.py  make_gold.py  make_knowledge_work_arena.py  make_variants.py  make_visual_assets.py  preflight_backends.py  probe_hf_import_runtime.py  probe_hf_model.py  probe_specialist_access.py  rescore_knowledge_work_runs.py  run_agent_api.py  run_alpha_experiment.py  run_alpha_matrix.py  run_alpha_slice.py  run_eval.py  run_grid.py  run_knowledge_work_ablation_packet.py  run_knowledge_work_arena.py  run_knowledge_work_matrix.py  run_warm_harness.py  (+2 more)
(+1447 files in other folders)
